--- a/index.html
+++ b/index.html
@@ -124,8 +124,6 @@
         }
         .HmktE {
             display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
             flex-direction: column;
         }
         .qF0y9 {
@@ -136,22 +134,17 @@
             align-content: stretch;
         }
         .rBNOH { 
-            -webkit-box-align: center;
             /* 테두리 크기 센터 */
             align-items: center;
         }
         .YBx95{
-            -webkit-box-pack: center;
             /* 중간으로 보내기 */
             justify-content: center;
         }
         .ybXk5 {
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
             flex-direction: row;
         }
         .vwCYk {
-            -webkit-box-flex: 1;
             flex: 1 1 auto;
             min-width: 0;
         }
@@ -162,15 +155,12 @@
             margin-bottom: 44px;
         }
         .IwRSH {
-            -webkit-box-align: stretch;
             align-items: stretch;
         }
         .eGOV_ {
-            -webkit-box-pack: start;
             justify-content: flex-start;
         }
         ._4EzTm {
-            -webkit-box-flex: 0px;
             flex: 0 0 auto;
         }
 
@@ -315,11 +305,9 @@
             margin: 10px 40px 18px;
         }
         .s311c {
-            -webkit-box-flex: 1;
-            flex-flow: 1;
-            flex-shrink: 1;
             background-color: #dbdbdb;
             height: 1px;
+            width: 105px;
             position: relative;
             top: 0.45em;
         }
