--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="login.css?ver=1" rel="stylesheet">
+
     <title>Instagram</title>
 </head>
 <body>
@@ -23,11 +24,7 @@
                         <!-- main phone instagram app picture -->
                         <div class="mainPhotoImg">
                             <div class="movePicPosition">
-                                <!-- <img alt="" class="sizeMovePic movePics " src="images/1.jpg">
-                                <img alt="" class="sizeMovePic  " src="images/2.jpg">
-                                <img alt="" class="sizeMovePic  " src="images/3.jpg">
-                                <img alt="" class="sizeMovePic  " src="images/4.jpg">
-                                <img alt="" class="sizeMovePic  moveNextPics" src="images/5.jpg"> -->
+                                <img alt="" class="sizeMovePic" src="images/4.jpg">
                             </div>
                         </div>
                         <!-- login & join -->
@@ -296,6 +293,7 @@
         </section>
     
     </div>
-    
+    <script type="text/javascript" src="loginPhoto.js"></script>
+
 </body>
 </html>
