--- a/previous/indexFirstDone.html
+++ b/previous/indexFirstDone.html
@@ -7,6 +7,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="icon" sizes="192x192" href="images/instagramFavicon.png">
     <!-- https://icons8.com/icons/set/favicon-instagram -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+
     <title>Login • Instagram</title>
     <style>
         html, body, #react-root {
