--- a/previous/indexSecondDone.html
+++ b/previous/indexSecondDone.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link href="login.css?ver=1" rel="stylesheet">
+    <link href="loginSecondDone.css?ver=1" rel="stylesheet">
     <title>Instagram</title>
 </head>
 <body>
