--- a/images/t.html
+++ b/images/t.html
@@ -36,9 +36,9 @@
                                         <div class="mainFootTopAjust">
                                             <div class="idPwSize">
                                                 <div class="idPwInputAjust">
-                                                    <label class="idPwLabelAjust" for="userId">
-                                                        <span class="idPwSpanAjust idPwSpanAjustTyped">Phone number, username, or email</span>
-                                                        <input aria-required="true" autocomplete="false" autocapitalize="off" autocorrect="off" maxlength="75" id="userId" name="username" type="text" class="pexuQ">
+                                                    <label class="idPwLabelAjust" for="">
+                                                        <span class="idPwSpanAjust">Phone number, username, or email</span>
+                                                        <input aria-label="Phone number, username, or email" aria-required="true" autocapitalize="off" autocorrect="off" maxlength="75" id="userId" name="username" type="text" class="pexuQ">
                                                     </label>
                                                     <!-- <div class="pwShow"></div> -->
                                                 </div>
@@ -47,10 +47,10 @@
                                                 <!-- password글자 백그라운드 색상지정 -->
                                                 <div class="idPwInputAjust">
                                                     <!-- password글자 인풋박스 왼쪽으로 옮기기  -->
-                                                    <label class="idPwLabelAjust" for="key">
+                                                    <label class="idPwLabelAjust">
                                                         <!-- password글자 인풋박스 안으로 넣기 -->
-                                                        <span class="idPwSpanAjust idPwSpanAjustTyped">Password</span>
-                                                        <input placeholder="Password" aria-required="true" autocomplete="false" autocapitalize="off" autocorrect="off" name="password" type="password" id="key" class="pexuQ">    
+                                                        <span class="idPwSpanAjust">Password</span>
+                                                        <input aria-label="Password" autocomplete="false" name="password" type="password" id="key" class="pexuQ">    
                                                     </label>
                                                     <div class="pwShow">
                                                         <div id="keyShow">Show</div>
