done with login inputbox placeHolder css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="icon" sizes="192x192" href="images/instagramFavicon.png">
     <!-- https://icons8.com/icons/set/favicon-instagram -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +67,7 @@
                                             비번을 입력을 시작하면 버튼이 나옵니다. -->
 
                                             <div class="loginAndFbLoginPosition">
-                                                <button class="buttonAjust loginButtonFont" id="loginButton" type="submit" disabled>
+                                                <button class="buttonAjust loginButtonFont buttonActive" id="loginButton" type="submit" disabled>
                                                     <div class="">Log In</div>
                                                 </button>
                                             </div>
