--- a/main.html
+++ b/main.html
@@ -1,1 +1,37 @@
-welcome user
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" sizes="192x192" href="images/instagramFavicon.png">
+    <!-- https://icons8.com/icons/set/favicon-instagram -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <title>Instagram</title>
+</head>
+<body>
+    <div>
+        <header>
+            <div>
+                <h1>logo</h1>
+            </div>
+
+            <div>
+                <input type="text">
+                search
+            </div>
+
+            <div>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""><img src="" alt=""></a>
+            </div>
+        </header>
+    </div>
+</body>
+</html>
