image address changed

--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                                     <!-- me -->
                                     <span class="">
                                         <a href="">
-                                            <img class="myPic" src="images/mainImages/baseProfilePic.jpeg" alt="">
+                                            <img class="myPic" src="/images/mainImages/baseProfilePic.jpeg" alt="">
                                         </a>
                                     </span>
                                 </div>
@@ -112,10 +112,10 @@
                                         <div class="friendStory">
                                             <div class="friendNamePic">
                                                 <a>
-                                                    <img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt="">
+                                                    <img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt="">
                                                 </a>
                                                 <a href="">
-                                                    <img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt="">
+                                                    <img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt="">
                                                 </a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
@@ -125,85 +125,85 @@
                                         <!-- friend story test copies started -->
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>                                    
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
                                         <div class="friendStory">
                                             <div class="friendNamePic">
-                                                <a><img class="storyPicBorder" src="images/mainImages/pictureBorder.png" alt=""></a>
-                                                <a href=""><img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt=""></a>
+                                                <a><img class="storyPicBorder" src="/images/mainImages/pictureBorder.png" alt=""></a>
+                                                <a href=""><img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt=""></a>
                                                 <div class="">Hyoung0987</div>
                                             </div>
                                         </div>
@@ -305,7 +305,7 @@
                                     <!-- someone who liked -->
                                     <div class="">
                                         <span>
-                                            <img class="whoLiked" src="images/mainImages/baseProfilePic.jpeg" alt="UserPicter">
+                                            <img class="whoLiked" src="/images/mainImages/baseProfilePic.jpeg" alt="UserPicter">
                                         </span>
                                         <span>Liked by ____ and ___ 25 others</span>
                                     </div>
@@ -399,9 +399,9 @@
         </div>
 
         <!-- 여러장 -->
-        <div class="mainPics">
+        <!-- <div class="mainPics">
             <img class="picSize" src="/images/mainImages/exaple1.mp4" alt="">
-        </div>
+        </div> -->
         
         <!-- 소리 줄이고 키기 -->
         <video width="100%" autoplay controls>
@@ -445,7 +445,7 @@
         <!-- someone who liked -->
         <div class="">
             <span>
-                <img class="whoLiked" src="images/mainImages/baseProfilePic.jpeg" alt="UserPicter">
+                <img class="whoLiked" src="/images/mainImages/baseProfilePic.jpeg" alt="UserPicter">
             </span>
             <span>Liked by ____ and ___ 25 others</span>
         </div>
@@ -650,7 +650,7 @@
                                         <span>
                                             <div class="storyPicBorder"></div>
                                             <a href="">
-                                                <img class="storyPicSwich" src="images/mainImages/baseProfilePic.jpeg" alt="">
+                                                <img class="storyPicSwich" src="/images/mainImages/baseProfilePic.jpeg" alt="">
                                             </a>
                                         </span>
                                         <span class="myAccountId">
